# llm-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  Makefile  README.md  README_zh-CN.md  STREAM_DISPLAY_IMPLEMENTATION.md  STREAM_FEATURE_COMPLETE.md  TROUBLESHOOTING_STREAM_DISPLAY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  req.md  start-dev.sh  start-docker-dev.sh  start-docker.sh  stop-docker.sh  test-docker.sh  test.sh
.github/workflows/: build.yml
backend/: .coverage  check_migration.py  pyproject.toml  requirements.txt  run-tests.sh  sync-requirements.sh
backend/app/: config.py  logging_config.py  main.py  scheduler.py
backend/docs/: ENCRYPTION.md  ENCRYPTION_IMPLEMENTATION_SUMMARY.md
backend/migrations/: README.md  add_cached_billing_columns.sql  add_extra_headers_column.sql  add_is_stream_column.sql  add_protocol_conversion_columns.sql  add_provider_options_column.sql  add_provider_remark_column.sql  add_usage_details_column.sql  create_key_value_store_table.sql  encrypt_api_keys.py  remove_model_provider_unique_constraint.sql
backend/tests/: __init__.py  conftest.py  verify_log_fields.py
docs/: api.md  architecture.md  modules.md  protocol_conversion.md  req.md  token_usage_report.md
docs/changes/: FIX_LOG_SERVICE_CRITICAL.md  IMPLEMENTATION_PLAN.md  QUICKSTART_STREAM_FEATURE.md  SECURITY_AUDIT_REPORT.md
docs/google/: caching-spec.md  embedding-spec.md  (+4 more)
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
llm_api_converter/: README.md  pyproject.toml  requirements.txt
llm_api_converter/api_protocol_converter/: __init__.py
llm_api_converter/api_protocol_converter/converters/: __init__.py  anthropic_messages.py  exceptions.py  openai_chat.py  openai_responses.py
llm_api_converter/api_protocol_converter/ir/: __init__.py  types.py
llm_api_converter/api_protocol_converter/schemas/: __init__.py
llm_api_converter/api_protocol_converter/stream/: __init__.py
llm_api_converter/docs/: FIELD_MAPPINGS.md  PROTOCOL_COMPARISON.md
llm_api_converter/examples/: basic_conversion.py  streaming.py  tool_calling.py
llm_api_converter/tests/: __init__.py  fixtures.py  test_converters.py
(+239 files in other folders)
